# sdl2-cmake-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_script.bat  build_script.sh  prepare.bat  prepare.sh
src/: CMakeLists.txt  main.cpp
