# CMakeList.txt : CMake project for sdl2-cmake-starter, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.21)

# Add source to this project's executable.
add_executable (${PROJECT_NAME} "main.cpp" "main.hpp")

# TODO: Add tests and install targets if needed.
